# redical

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
redical/: __init__.py  abstract.py  connection.py  const.py  exception.py  mixin.py  parser.py  pool.py  redical.py  type.py  util.py
redical/command/: __init__.py  base.py  hash.py  key.py  server.py  set.py  sortedset.py  string.py
script/: lint  test-continuous  type-check
tests/: command-tests.py  commands-hashes-tests.py  commands-keys-tests.py  commands-server-tests.py  commands-sets-tests.py  commands-sortedsets-tests.py  commands-strings-tests.py  conftest.py  connection-tests.py  mixin-tests.py  pool-tests.py  redical-tests.py  test_redical.py  util-tests.py
