[tool.poetry]
name = "redical"
version = "0.1.0"
description = ""
authors = ["atatsu <nathan.lundquist@gmail.com>"]
include = ["redical/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
yarl = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.800"
flake8 = "^3.8.3"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.14.0"
hiredis = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
